--- a/.github/workflows/upload-secrets-to-vm.yml
+++ b/.github/workflows/upload-secrets-to-vm.yml
@@ -1,4 +1,4 @@
-name: Install Docker in EC2 instance
+name: Upload AWS Secret to EC2 Instance
 
 on:
   workflow_dispatch:
@@ -37,12 +37,4 @@ jobs:
     
     - name: Execute the transferred scripts within VM
       run: |
-           ssh -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} "bash -s" < create_aws_secret.sh "${{ secrets.AWS_ACCESS_KEY_ID }}" "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
-
-    - name: Create the secret
-      run: |
-           ssh -v -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} 'sudo microk8s kubectl create secret generic aws-secret -n crossplane-system --from-file=creds=/home/ubuntu/aws-creds.conf'
-
-    - name: View the secret
-      run: |
-           ssh -v -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} 'sudo microk8s kubectl get secrets -n crossplane-system'
+           ssh -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} "bash -s" < create_aws_secrets.sh "${{ secrets.AWS_ACCESS_KEY_ID }}" "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
