--- a/.github/workflows/create-ec2-instance.yml
+++ b/.github/workflows/create-ec2-instance.yml
@@ -15,11 +15,14 @@ on:
       region:
         description: 'The Region of EC2 instance'
         required: true
-      publicKey:
-        description: 'The SSH Public key of EC2 instance'
+      keyName:
+        description: 'The Key Pair of EC2 instance'
         required: true
       vmName:
         description: 'The Name of EC2 instance'
+        required: true
+      resourceName:
+        description: 'The ResourceName for Crossplane'
         required: true
 
 
@@ -48,9 +51,9 @@ jobs:
 
     - name: Copy Create Ec2 instance script to VM
       run: |
-          scp create_ec2_instance_v2.sh ubuntu@${{ github.event.inputs.instancePublicIP }}:/home/ubuntu
+          scp create_ec2_instance_v1.sh ubuntu@${{ github.event.inputs.instancePublicIP }}:/home/ubuntu
           ssh -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} 'ls -la'
     
     - name: Execute the transferred script within VM
       run: |
-           ssh -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} "bash -s" < create_ec2_instance_v2.sh ${{ github.event.inputs.imageID }} ${{ github.event.inputs.instanceType }} ${{ github.event.inputs.region }} ${{ github.event.inputs.publicKey }} ${{ github.event.inputs.vmName }}
+           ssh -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} "bash -s" < create_ec2_instance_v1.sh ${{ github.event.inputs.imageID }} ${{ github.event.inputs.instanceType }} ${{ github.event.inputs.region }} ${{ github.event.inputs.keyName }} ${{ github.event.inputs.vmName }} ${{ github.event.inputs.resourceName }}
