--- a/.github/workflows/create-ec2-instance.yml
+++ b/.github/workflows/create-ec2-instance.yml
@@ -57,3 +57,10 @@ jobs:
     - name: Execute the transferred script within VM
       run: |
            ssh -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} "bash -s" < create_ec2_instance_v1.sh ${{ github.event.inputs.imageID }} ${{ github.event.inputs.instanceType }} ${{ github.event.inputs.region }} ${{ github.event.inputs.keyName }} ${{ github.event.inputs.vmName }} ${{ github.event.inputs.resourceName }}
+
+    - name: Upload Instance Info
+      uses: actions/upload-artifact@v4
+      with:
+        name: InstanceInfo
+        path: artifacts
+        retention-days: 1
