--- a/.github/workflows/create-ec2-instance.yml
+++ b/.github/workflows/create-ec2-instance.yml
@@ -49,10 +49,20 @@ jobs:
       run: |
           scp create_ec2_instance_v1.sh ubuntu@${{ github.event.inputs.instancePublicIP }}:/home/ubuntu
           ssh -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} 'ls -la'
+
+    - name: Make the ec2 instance name dynamic
+      id: step1
+      run: |
+          echo "::set-output name=VMName::"${{ github.event.inputs.vmName }}-$(cat /proc/sys/kernel/random/uuid | cut -d '-' -f1)""
     
     - name: Execute the transferred script within VM
       run: |
-           ssh -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} "bash -s" < create_ec2_instance_v1.sh ${{ github.event.inputs.imageID }} ${{ github.event.inputs.instanceType }} ${{ github.event.inputs.region }} ${{ github.event.inputs.keyName }} ${{ github.event.inputs.vmName }}
+           ssh -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} "bash -s" < create_ec2_instance_v1.sh ${{ github.event.inputs.imageID }} ${{ github.event.inputs.instanceType }} ${{ github.event.inputs.region }} ${{ github.event.inputs.keyName }} ${{ steps.step1.outputs.VMName }}
+
+    - name: Save the Instance info in text file.
+      run: |
+           mkdir -p artifacts
+           ssh -i ~/.ssh/id_rsa ubuntu@${{ github.event.inputs.instancePublicIP }} "cat artifacts/instanceInfo.txt"> artifacts/InstanceInfo.txt
 
     - name: Upload Instance Info
       uses: actions/upload-artifact@v4
